--- a/doc/dissertation/resources/literature_survey.tex
+++ b/doc/dissertation/resources/literature_survey.tex
@@ -664,7 +664,7 @@ In order to verify that the resultant DSL is correct, it is better to utilise a 
 
 This decoupling of the language specification and implementation, as discussed by \citet{cleaveland1988building} is key to the implementation of correct languages.
 As long as the metacompiler is correct, the resultant compilers should maintain the semantics of the input programs \citep{Gray:1992:ECF:129630.129637}.
-Centralisation of the semantic properties of DSLs into the metacompiler allows the centralisation of the proof infrastructure to allow automation.\\
+Centralisation of the semantic properties of DSLs into the metacompiler allows the centralisation of the proof infrastructure to allow automation.
 
 \subsection{Metacompiler Systems} % (fold)
 \label{sub:metacompiler_systems}
